applications/orion/beta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beta
  namespace: orion
  labels:
    app: beta
    team: orion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: beta
  template:
    metadata:
      labels:
        app: beta
        team: orion
    spec:
      containers:
        - name: beta
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      volumes:
        - name: html
          configMap:
            name: beta-html
